The Samba-Bugzilla – Bug 12016
cleanupd terminates main smbd on exit
Last modified: 2016-08-05 07:40:02 UTC
cleanupd (and notifyd and mdssd) call reinit_after_fork() which leaves am_parent intact. As a result when exitting installed atexit handler killkids() will be called doing signal(0,SIGTERM), sending SIGTERM to all processes in its process group, main smbd being one of them. Simple fix: call smbd_ reinit_after_fork() instead. Have patch, need bugnumber.
Created attachment 12300 [details] Patch for 4.4 backported from master
Created attachment 12301 [details] Patch for 4.3 backported from master
Pushed to autobuild-v4-[4|3]-test.
(In reply to Karolin Seeger from comment #3) Pushed to both branches. Closing out bug report. Thanks!